syntax = "proto3";
package kong.proxy;

// import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

//[go_lang options start]
option go_package = "internal/pkg/ipc";
//[go_lang options end]

service Admin {

  rpc NodeInfo(NodeInfoRequest) returns (NodeInfoResponse) {}
  rpc GetStatus(KongStatusRequest) returns (KongStatusResponse) {}

}

message NodeInfoRequest{
}

message Plugins {
  map<string, bool> availableOnServer = 1 [json_name = "available_on_server"];
  repeated string enabledInCluster = 2 [json_name = "enabled_in_cluster"];
}

message KeyValuePair {
  string name = 1;
  string value = 2;
}

message Configuration {
  repeated string plugins = 1;
  string cassandraReadConsistency = 2 [json_name = "cassandra_read_consistency"];
  repeated string adminListen = 3 [json_name = "admin_listen"];
  string proxyAccessLog = 4  [json_name = "proxy_access_log"];
  repeated KeyValuePair nginxStreamDirectives = 5 [json_name = "nginx_stream_directives"];
  string cassandraUsername = 6 [json_name = "cassandra_username"];
  string nginxUpstreamKeepAlive = 7 [json_name = "nginx_upstream_keepalive"];
  uint32 dnsStaleTTL = 8 [json_name = "dns_stale_ttl"];
  repeated KeyValuePair nginxProxyDirectives = 9;
  repeated KeyValuePair nginxMainDirectives = 10;
  map<string, bool> loadedPlugins = 11 [json_name = "loaded_plugins"];
  bool adminSSLEnabled = 12 [json_name = "admin_ssl_enabled"];
  uint32 upstreamKeepAliveIdleTimeout = 13 [json_name = "upstream_keepalive_idle_timeout"];
  uint32 dbCacheTTL = 14 [json_name = "db_cache_ttl"];
  string nginxHTTPSSLProtocols = 15 [json_name = "nginx_http_ssl_protocols"];
  string cassandraWriteConsistency = 16 [json_name = "cassandra_write_consistency"];
}

message Timers {
  int64 pending = 1;
  int64 running = 2;
}

message NodeInfoResponse{
  Plugins plugins = 1;
  string tagLine = 2;
  Configuration configuration = 3;
  string version = 4;
  string nodeId = 5;
  string luaVersion = 6;
  map<string, uint64> prngSeeds = 7;
  Timers timers = 8;
  string hostname = 9;
}

message KongStatusRequest {
}

message KongStatusResponse {
}
